try to fix some display issues on mobile

--- a/public/style.css
+++ b/public/style.css
@@ -20,12 +20,6 @@ body {
   margin: 0px;
 }
 
-/* p,
-li {
-  letter-spacing: 1.05px;
-  line-height: 1.5;
-} */
-
 h1 {
   font-weight: bold;
   font-size: 48px;
@@ -102,20 +96,25 @@ main {
   float: right;
 }
 
-/* Add media queries for responsiveness - when the screen is 500px wide or less, stack the links on top of each other */
-@media screen and (max-width: 600px) {
-  .header a {
-    float: none;
-    display: block;
-    text-align: left;
-  }
-
+/* Add media queries for responsiveness - when the screen is 
+600px wide or less, hide the header */
+@media screen and (max-width: 800px) {
   .header {
     visibility: hidden;
   }
 
   .homepage {
     margin-top: 0px;
+  }
+
+  blockquote {
+    margin: 0px;
+  }
+}
+
+@media (max-width: 1000px) {
+  .logo {
+    display: none;
   }
 }
 
@@ -330,8 +329,20 @@ button {
   padding: 10px 50px 10px 50px;
 }
 
+@media (max-width: 600px) {
+  .form {
+    padding: 0px;
+  }
+}
+
 .input-container {
   width: 50%;
+}
+
+@media (max-width: 600px) {
+  .input-container {
+    width: 100%;
+  }
 }
 
 .preview {
@@ -340,6 +351,12 @@ button {
   border: 1px solid grey;
   border-radius: 3px;
   box-shadow: 2px 2px #7D6406;
+}
+
+@media (max-width: 600px) {
+  .preview {
+    padding: 5px;
+  }
 }
 
 .send-mail-container {
@@ -492,17 +509,24 @@ table.demands {
   grid-gap: 1rem;
 }
 
-@media (min-width: 600px) {
-  .demands-grid {
-    grid-template-columns: repeat(2, 1fr);
-  }
-}
-
 .demand-card {
   padding-left: 40px;
   padding-right: 40px;
   font-weight: normal;
   vertical-align: top;
+}
+
+@media (min-width: 900px) {
+  .demands-grid {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media (max-width: 600px) {
+  .demand-card {
+    padding-left: 0px;
+    padding-right: 0px;
+  }
 }
 
 .demand-card h3 {
